[tool.poetry]
name = "resilience4py"
version = "0.1.0"
description = "resilience4py is a port of resilience4j library"
authors = ["Dr. Nobel Khandaker <nobel@outlook.com>"]
readme = "README.md"
packages = [{include = "resilience4py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
